# dms_check

./: README.md  pyproject.toml
db_check/ora_check/: __main__.py  config_oracle.yaml
